# life-calendar

./: .dockerignore  .env.example  .env.production  .gitattributes  .gitignore  Dockerfile  README.md  capacitor.config.ts  docker-compose.yml  eslint.config.js  frontend.Dockerfile  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: desktop-release.yml  mobile-update.yml  release.yml  verify-macos-updater.yml
deploy/: frontend.nginx.conf
docs/: NOTIFICATIONS_STATUS.md  OAUTH_IDENTITY_AND_CALENDAR_SYNC_PLAN.md  SELF_HOSTING.md  backend-direction.md
mobile/: .env.example  AGENTS.md  App.js  app.json  eas.json  package.json
pocketbase/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh
pocketbase/pb_migrations/: 1782869374_init_core.js  1782870779_support_data.js  1782871990_support_data_apply.js  1782872600_events_api_bridge.js  1782874700_events_schema_repair.js  1782876100_events_zero_values_fix.js  1782877600_support_collections_bridge.js  1782950400_habits_bridge.js  1782952200_notifications_bridge.js  1782954000_operational_bridge.js  (+13 more)
public/: manifest.json  sw-push.js
scripts/: generate-icons.js  generate-tauri-icons.js  generate-vapid-keys.js  sweep-orphaned-events.js
server/: index.js
shared/: categories.js  package.json  parseEvents.js  parseEvents.test.js  parseEvents.tz.test.js  peopleSuggestions.js  peopleSuggestions.test.js
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+209 files in other folders)
