[package]
name = "pls-calendar"
version = "0.1.0"
description = "PLS Calendar — plan your time, track your life, see the difference."
authors = []
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pls_calendar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pls-calendar"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
